; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/block/extr_scm_blk.c___scm_free_rq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/block/extr_scm_blk.c___scm_free_rq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scm_request = type { i64, i64 }
%struct.aob_rq_header = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scm_request*)* @__scm_free_rq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__scm_free_rq(%struct.scm_request* %0) #0 {
  %2 = alloca %struct.scm_request*, align 8
  %3 = alloca %struct.aob_rq_header*, align 8
  store %struct.scm_request* %0, %struct.scm_request** %2, align 8
  %4 = load %struct.scm_request*, %struct.scm_request** %2, align 8
  %5 = call %struct.aob_rq_header* @to_aobrq(%struct.scm_request* %4)
  store %struct.aob_rq_header* %5, %struct.aob_rq_header** %3, align 8
  %6 = load %struct.scm_request*, %struct.scm_request** %2, align 8
  %7 = getelementptr inbounds %struct.scm_request, %struct.scm_request* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = call i32 @free_page(i64 %8)
  %10 = load %struct.scm_request*, %struct.scm_request** %2, align 8
  %11 = getelementptr inbounds %struct.scm_request, %struct.scm_request* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @free_page(i64 %12)
  %14 = load %struct.scm_request*, %struct.scm_request** %2, align 8
  %15 = call i32 @__scm_free_rq_cluster(%struct.scm_request* %14)
  %16 = load %struct.aob_rq_header*, %struct.aob_rq_header** %3, align 8
  %17 = call i32 @kfree(%struct.aob_rq_header* %16)
  ret void
}

declare dso_local %struct.aob_rq_header* @to_aobrq(%struct.scm_request*) #1

declare dso_local i32 @free_page(i64) #1

declare dso_local i32 @__scm_free_rq_cluster(%struct.scm_request*) #1

declare dso_local i32 @kfree(%struct.aob_rq_header*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
